src/interpreter/generated/VisLangParser.ts
// Generated from src/grammar/VisLang.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { VisLangListener } from "./VisLangListener.js";
import { VisLangVisitor } from "./VisLangVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class VisLangParser extends antlr.Parser {
    public static readonly Lparen = 1;
    public static readonly Rparen = 2;
    public static readonly Lbrace = 3;
    public static readonly Rbrace = 4;
    public static readonly Lbracket = 5;
    public static readonly Rbracket = 6;
    public static readonly Comma = 7;
    public static readonly Colon = 8;
    public static readonly Semicolon = 9;
    public static readonly Not = 10;
    public static readonly Mul = 11;
    public static readonly Div = 12;
    public static readonly Mod = 13;
    public static readonly Add = 14;
    public static readonly Sub = 15;
    public static readonly Langle = 16;
    public static readonly Rangle = 17;
    public static readonly Leq = 18;
    public static readonly Req = 19;
    public static readonly Eqeq = 20;
    public static readonly Neq = 21;
    public static readonly Assign = 22;
    public static readonly Add_Assign = 23;
    public static readonly Sub_Assign = 24;
    public static readonly Mul_Assign = 25;
    public static readonly Div_Assign = 26;
    public static readonly Mod_Assign = 27;
    public static readonly Fun = 28;
    public static readonly If = 29;
    public static readonly Else = 30;
    public static readonly For = 31;
    public static readonly Do = 32;
    public static readonly While = 33;
    public static readonly Print = 34;
    public static readonly Println = 35;
    public static readonly Return = 36;
    public static readonly In = 37;
    public static readonly And = 38;
    public static readonly Or = 39;
    public static readonly Null = 40;
    public static readonly Boolean = 41;
    public static readonly String = 42;
    public static readonly Integer = 43;
    public static readonly Double = 44;
    public static readonly Comment = 45;
    public static readonly Identifier = 46;
    public static readonly Whitespace = 47;
    public static readonly RULE_program = 0;
    public static readonly RULE_body = 1;
    public static readonly RULE_declaration = 2;
    public static readonly RULE_funDecl = 3;
    public static readonly RULE_params = 4;
    public static readonly RULE_statement = 5;
    public static readonly RULE_ifStatement = 6;
    public static readonly RULE_ifStat = 7;
    public static readonly RULE_elifStat = 8;
    public static readonly RULE_elseStat = 9;
    public static readonly RULE_doWhileStat = 10;
    public static readonly RULE_whileStat = 11;
    public static readonly RULE_forStat = 12;
    public static readonly RULE_callStat = 13;
    public static readonly RULE_printCall = 14;
    public static readonly RULE_funCall = 15;
    public static readonly RULE_block = 16;
    public static readonly RULE_returnStatement = 17;
    public static readonly RULE_expr = 18;
    public static readonly RULE_assignment = 19;

    public static readonly literalNames = [
        null, "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "':'", "';'", 
        "'!'", "'*'", "'/'", "'%'", "'+'", "'-'", "'<'", "'>'", "'<='", 
        "'>='", "'=='", "'!='", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", 
        "'fun'", "'if'", "'else'", "'for'", "'do'", "'while'", "'print'", 
        "'println'", "'return'", "'in'", "'and'", "'or'", "'null'"
    ];

    public static readonly symbolicNames = [
        null, "Lparen", "Rparen", "Lbrace", "Rbrace", "Lbracket", "Rbracket", 
        "Comma", "Colon", "Semicolon", "Not", "Mul", "Div", "Mod", "Add", 
        "Sub", "Langle", "Rangle", "Leq", "Req", "Eqeq", "Neq", "Assign", 
        "Add_Assign", "Sub_Assign", "Mul_Assign", "Div_Assign", "Mod_Assign", 
        "Fun", "If", "Else", "For", "Do", "While", "Print", "Println", "Return", 
        "In", "And", "Or", "Null", "Boolean", "String", "Integer", "Double", 
        "Comment", "Identifier", "Whitespace"
    ];
    public static readonly ruleNames = [
        "program", "body", "declaration", "funDecl", "params", "statement", 
        "ifStatement", "ifStat", "elifStat", "elseStat", "doWhileStat", 
        "whileStat", "forStat", "callStat", "printCall", "funCall", "block", 
        "returnStatement", "expr", "assignment",
    ];

    public get grammarFileName(): string { return "VisLang.g4"; }
    public get literalNames(): (string | null)[] { return VisLangParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return VisLangParser.symbolicNames; }
    public get ruleNames(): string[] { return VisLangParser.ruleNames; }
    public get serializedATN(): number[] { return VisLangParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, VisLangParser._ATN, VisLangParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, VisLangParser.RULE_program);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 40;
            this.body();
            this.state = 41;
            this.match(VisLangParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public body(): BodyContext {
        let localContext = new BodyContext(this.context, this.state);
        this.enterRule(localContext, 2, VisLangParser.RULE_body);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 48;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                this.state = 48;
                this.errorHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this.tokenStream, 0, this.context) ) {
                case 1:
                    {
                    this.state = 43;
                    this.statement();
                    }
                    break;
                case 2:
                    {
                    this.state = 44;
                    this.declaration();
                    }
                    break;
                case 3:
                    {
                    this.state = 45;
                    this.expr(0);
                    this.state = 46;
                    this.match(VisLangParser.Semicolon);
                    }
                    break;
                }
                }
                this.state = 50;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2952823842) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 24335) !== 0));
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public declaration(): DeclarationContext {
        let localContext = new DeclarationContext(this.context, this.state);
        this.enterRule(localContext, 4, VisLangParser.RULE_declaration);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 52;
            this.funDecl();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public funDecl(): FunDeclContext {
        let localContext = new FunDeclContext(this.context, this.state);
        this.enterRule(localContext, 6, VisLangParser.RULE_funDecl);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 54;
            this.match(VisLangParser.Fun);
            this.state = 55;
            this.match(VisLangParser.Identifier);
            this.state = 56;
            this.match(VisLangParser.Lparen);
            this.state = 58;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 33826) !== 0) || ((((_la - 40)) & ~0x1F) === 0 && ((1 << (_la - 40)) & 95) !== 0)) {
                {
                this.state = 57;
                this.params();
                }
            }

            this.state = 60;
            this.match(VisLangParser.Rparen);
            this.state = 61;
            this.match(VisLangParser.Lbrace);
            this.state = 62;
            this.block();
            this.state = 63;
            this.match(VisLangParser.Rbrace);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public params(): ParamsContext {
        let localContext = new ParamsContext(this.context, this.state);
        this.enterRule(localContext, 8, VisLangParser.RULE_params);
        try {
            let alternative: number;
            this.state = 81;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 5, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 65;
                this.match(VisLangParser.Identifier);
                this.state = 70;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 3, this.context);
                while (alternative !== 1 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                    if (alternative === 1 + 1) {
                        {
                        {
                        this.state = 66;
                        this.match(VisLangParser.Comma);
                        this.state = 67;
                        this.match(VisLangParser.Identifier);
                        }
                        }
                    }
                    this.state = 72;
                    this.errorHandler.sync(this);
                    alternative = this.interpreter.adaptivePredict(this.tokenStream, 3, this.context);
                }
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 73;
                this.expr(0);
                this.state = 78;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 4, this.context);
                while (alternative !== 1 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                    if (alternative === 1 + 1) {
                        {
                        {
                        this.state = 74;
                        this.match(VisLangParser.Comma);
                        this.state = 75;
                        this.expr(0);
                        }
                        }
                    }
                    this.state = 80;
                    this.errorHandler.sync(this);
                    alternative = this.interpreter.adaptivePredict(this.tokenStream, 4, this.context);
                }
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statement(): StatementContext {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 10, VisLangParser.RULE_statement);
        try {
            this.state = 93;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 6, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 83;
                this.assignment();
                this.state = 84;
                this.match(VisLangParser.Semicolon);
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 86;
                this.ifStatement();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 87;
                this.doWhileStat();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 88;
                this.whileStat();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 89;
                this.forStat();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 90;
                this.callStat();
                this.state = 91;
                this.match(VisLangParser.Semicolon);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public ifStatement(): IfStatementContext {
        let localContext = new IfStatementContext(this.context, this.state);
        this.enterRule(localContext, 12, VisLangParser.RULE_ifStatement);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 95;
            this.ifStat();
            this.state = 99;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 7, this.context);
            while (alternative !== 1 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1 + 1) {
                    {
                    {
                    this.state = 96;
                    this.elifStat();
                    }
                    }
                }
                this.state = 101;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 7, this.context);
            }
            this.state = 103;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 30) {
                {
                this.state = 102;
                this.elseStat();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public ifStat(): IfStatContext {
        let localContext = new IfStatContext(this.context, this.state);
        this.enterRule(localContext, 14, VisLangParser.RULE_ifStat);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 105;
            this.match(VisLangParser.If);
            this.state = 106;
            this.match(VisLangParser.Lparen);
            this.state = 107;
            this.expr(0);
            this.state = 108;
            this.match(VisLangParser.Rparen);
            this.state = 109;
            this.match(VisLangParser.Lbrace);
            this.state = 110;
            this.block();
            this.state = 111;
            this.match(VisLangParser.Rbrace);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public elifStat(): ElifStatContext {
        let localContext = new ElifStatContext(this.context, this.state);
        this.enterRule(localContext, 16, VisLangParser.RULE_elifStat);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 113;
            this.match(VisLangParser.Else);
            this.state = 114;
            this.match(VisLangParser.If);
            this.state = 115;
            this.match(VisLangParser.Lparen);
            this.state = 116;
            this.expr(0);
            this.state = 117;
            this.match(VisLangParser.Rparen);
            this.state = 118;
            this.match(VisLangParser.Lbrace);
            this.state = 119;
            this.block();
            this.state = 120;
            this.match(VisLangParser.Rbrace);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public elseStat(): ElseStatContext {
        let localContext = new ElseStatContext(this.context, this.state);
        this.enterRule(localContext, 18, VisLangParser.RULE_elseStat);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 122;
            this.match(VisLangParser.Else);
            this.state = 123;
            this.match(VisLangParser.Lbrace);
            this.state = 124;
            this.block();
            this.state = 125;
            this.match(VisLangParser.Rbrace);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public doWhileStat(): DoWhileStatContext {
        let localContext = new DoWhileStatContext(this.context, this.state);
        this.enterRule(localContext, 20, VisLangParser.RULE_doWhileStat);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 127;
            this.match(VisLangParser.Do);
            this.state = 128;
            this.match(VisLangParser.Lbrace);
            this.state = 129;
            this.block();
            this.state = 130;
            this.match(VisLangParser.Rbrace);
            this.state = 131;
            this.match(VisLangParser.While);
            this.state = 132;
            this.match(VisLangParser.Lparen);
            this.state = 133;
            this.expr(0);
            this.state = 134;
            this.match(VisLangParser.Rparen);
            this.state = 135;
            this.match(VisLangParser.Semicolon);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public whileStat(): WhileStatContext {
        let localContext = new WhileStatContext(this.context, this.state);
        this.enterRule(localContext, 22, VisLangParser.RULE_whileStat);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 137;
            this.match(VisLangParser.While);
            this.state = 138;
            this.match(VisLangParser.Lparen);
            this.state = 139;
            this.expr(0);
            this.state = 140;
            this.match(VisLangParser.Rparen);
            this.state = 141;
            this.match(VisLangParser.Lbrace);
            this.state = 142;
            this.block();
            this.state = 143;
            this.match(VisLangParser.Rbrace);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public forStat(): ForStatContext {
        let localContext = new ForStatContext(this.context, this.state);
        this.enterRule(localContext, 24, VisLangParser.RULE_forStat);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 145;
            this.match(VisLangParser.For);
            this.state = 146;
            this.match(VisLangParser.Lparen);
            this.state = 150;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 9, this.context) ) {
            case 1:
                {
                this.state = 147;
                this.assignment();
                }
                break;
            case 2:
                {
                this.state = 148;
                this.match(VisLangParser.Identifier);
                }
                break;
            case 3:
                {
                this.state = 149;
                this.match(VisLangParser.Integer);
                }
                break;
            }
            this.state = 152;
            this.match(VisLangParser.In);
            this.state = 153;
            _la = this.tokenStream.LA(1);
            if(!(_la === 43 || _la === 46)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 154;
            this.match(VisLangParser.Rparen);
            this.state = 155;
            this.match(VisLangParser.Lbrace);
            this.state = 156;
            this.block();
            this.state = 157;
            this.match(VisLangParser.Rbrace);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public callStat(): CallStatContext {
        let localContext = new CallStatContext(this.context, this.state);
        this.enterRule(localContext, 26, VisLangParser.RULE_callStat);
        try {
            this.state = 161;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case VisLangParser.Print:
            case VisLangParser.Println:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 159;
                this.printCall();
                }
                break;
            case VisLangParser.Identifier:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 160;
                this.funCall();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public printCall(): PrintCallContext {
        let localContext = new PrintCallContext(this.context, this.state);
        this.enterRule(localContext, 28, VisLangParser.RULE_printCall);
        let _la: number;
        try {
            this.state = 175;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case VisLangParser.Print:
                localContext = new PrintContext(localContext);
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 163;
                this.match(VisLangParser.Print);
                this.state = 164;
                this.match(VisLangParser.Lparen);
                this.state = 166;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 33826) !== 0) || ((((_la - 40)) & ~0x1F) === 0 && ((1 << (_la - 40)) & 95) !== 0)) {
                    {
                    this.state = 165;
                    this.expr(0);
                    }
                }

                this.state = 168;
                this.match(VisLangParser.Rparen);
                }
                break;
            case VisLangParser.Println:
                localContext = new PrintlnContext(localContext);
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 169;
                this.match(VisLangParser.Println);
                this.state = 170;
                this.match(VisLangParser.Lparen);
                this.state = 172;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 33826) !== 0) || ((((_la - 40)) & ~0x1F) === 0 && ((1 << (_la - 40)) & 95) !== 0)) {
                    {
                    this.state = 171;
                    this.expr(0);
                    }
                }

                this.state = 174;
                this.match(VisLangParser.Rparen);
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public funCall(): FunCallContext {
        let localContext = new FunCallContext(this.context, this.state);
        this.enterRule(localContext, 30, VisLangParser.RULE_funCall);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 177;
            this.match(VisLangParser.Identifier);
            this.state = 178;
            this.match(VisLangParser.Lparen);
            this.state = 180;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 33826) !== 0) || ((((_la - 40)) & ~0x1F) === 0 && ((1 << (_la - 40)) & 95) !== 0)) {
                {
                this.state = 179;
                this.params();
                }
            }

            this.state = 182;
            this.match(VisLangParser.Rparen);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public block(): BlockContext {
        let localContext = new BlockContext(this.context, this.state);
        this.enterRule(localContext, 32, VisLangParser.RULE_block);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 190;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2684388386) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 24335) !== 0)) {
                {
                this.state = 188;
                this.errorHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this.tokenStream, 15, this.context) ) {
                case 1:
                    {
                    this.state = 184;
                    this.expr(0);
                    this.state = 185;
                    this.match(VisLangParser.Semicolon);
                    }
                    break;
                case 2:
                    {
                    this.state = 187;
                    this.statement();
                    }
                    break;
                }
                }
                this.state = 192;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 194;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 36) {
                {
                this.state = 193;
                this.returnStatement();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public returnStatement(): ReturnStatementContext {
        let localContext = new ReturnStatementContext(this.context, this.state);
        this.enterRule(localContext, 34, VisLangParser.RULE_returnStatement);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 196;
            this.match(VisLangParser.Return);
            this.state = 197;
            this.expr(0);
            this.state = 198;
            this.match(VisLangParser.Semicolon);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public expr(): ExprContext;
    public expr(_p: number): ExprContext;
    public expr(_p?: number): ExprContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new ExprContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 36;
        this.enterRecursionRule(localContext, 36, VisLangParser.RULE_expr, _p);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 228;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 20, this.context) ) {
            case 1:
                {
                localContext = new UnaryNotContext(localContext);
                this.context = localContext;
                previousContext = localContext;

                this.state = 201;
                this.match(VisLangParser.Not);
                this.state = 202;
                this.expr(19);
                }
                break;
            case 2:
                {
                localContext = new UnaryMinContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 203;
                this.match(VisLangParser.Sub);
                this.state = 204;
                this.expr(18);
                }
                break;
            case 3:
                {
                localContext = new ArrayLiteralContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 205;
                this.match(VisLangParser.Lbracket);
                this.state = 214;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 33826) !== 0) || ((((_la - 40)) & ~0x1F) === 0 && ((1 << (_la - 40)) & 95) !== 0)) {
                    {
                    this.state = 206;
                    this.expr(0);
                    this.state = 211;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                    while (_la === 7) {
                        {
                        {
                        this.state = 207;
                        this.match(VisLangParser.Comma);
                        this.state = 208;
                        this.expr(0);
                        }
                        }
                        this.state = 213;
                        this.errorHandler.sync(this);
                        _la = this.tokenStream.LA(1);
                    }
                    }
                }
